# fastfeatures

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
src/fastfeatures/: __init__.py  routes_discovery.py
src/fastfeatures/core/: generate_feature.py  generate_project_scaffolding.py  generate_settings.py  models_discoverer.py  routes_discoverer.py  utils.py
src/fastfeatures/template_base/: env_template
src/fastfeatures/template_base/app/: main.py
src/fastfeatures/template_base/app/core/: __init__.py
src/fastfeatures/template_base/app/core/lib/: base_model_service.py  database.py
src/fastfeatures/template_base/app/features/: __init__.py
src/fastfeatures/template_feature/: routes.py
src/fastfeatures/template_feature/models/: feature_name.py
src/fastfeatures/template_feature/services/: feature_name_services.py
