[project]
name = "fastfeatures"
version = "0.1.1"
description = "Modular features discovery system for FastAPI projects."
authors = [
    {name = "Yuri Seki",email = "yuriseki@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.118.3,<0.119.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "click (>=8.1.7,<9.0.0)",
    "setuptools (>=69.0.3,<70.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
fastfeatures-scaffold = "fastfeatures.core.generate_project_scaffolding:generate_project_scaffolding_cli"
fastfeatures-settings = "fastfeatures.core.generate_settings:generate_settings_cli"
fastfeatures-feature = "fastfeatures.core.generate_feature:generate_feature_cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/yuriseki/fastfeatures"
Issues = "https://github.com/yuriseki/fastfeatures/issues"