[project]
name = "fastfeatures"
version = "0.1.6"
description = "A powerful FastAPI toolkit designed to accelerate development with a modular, async-first architecture. It provides project scaffolding, feature generation, automatic settings from .env files, and auto-discovery of routes and SQL models. This reduces boilerplate, simplifies setup, and ensures high performance, ideal for modern applications and LLM integrations. Seamlessly integrates with Alembic for database migrations."
authors = [
    { name = "Yuri Seki", email = "yuriseki@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.118.3,<0.119.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "click (>=8.1.7,<9.0.0)",
    "setuptools (>=80.9.0,<90.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
ff-init = "fastfeatures.core.generate_project_scaffolding:generate_project_scaffolding_cli"
ff-settings = "fastfeatures.core.generate_settings:generate_settings_cli"
ff-feature = "fastfeatures.core.generate_feature:generate_feature_cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/yuriseki/fastfeatures"
Issues = "https://github.com/yuriseki/fastfeatures/issues"